fix: h2 + h3 spacing

--- a/public/style.css
+++ b/public/style.css
@@ -34,6 +34,10 @@ h3 {
   color: white;
 }
 
+h2 + h3 {
+  margin-top: 0;
+}
+
 strong {
   color: white;
 }
